Remove BlockAccessListsMessage.createUnsafe(...)
Signed-off-by: Miroslav Kovář <miroslavkovar@protonmail.com>